# racy

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: aabb.rs  bounding_box.rs  camera.rs  canvas.rs  cube.rs  dyn_group.rs  example_shape.rs  group.rs  intersect.rs  intersection.rs  lib.rs  light.rs  local_intersect.rs  local_normal.rs  main.rs  material.rs  normal.rs  plane.rs  ray.rs  shape.rs  sphere.rs  triangle.rs  world.rs
