[package]
name = "racy"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[dependencies]
memmap = "0.7.0"
nalgebra = "0.24"
nom_stl = { git = "ssh://git@github.com/fast-radius/nom_stl", rev = "6eaa874", features = ["hashbrown"] }
rayon = "1.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
