[package]
name = "racy"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23"
nalgebra = "0.24.1"
nom_stl = "0.2"

[target.'cfg(not(target = "wasm32-unknown-unknown"))'.dependencies]
rayon = "1.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
